scribble-cli/src/test/resources/good/syntax/inlinedunfolding/grecursion/Test02c.scr
module good.syntax.inlinedunfolding.grecursion.Test02c;


global protocol Proto1(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			3() from A to B;
			continue X;
		}
		or
		{
			rec Y  // Testing nested InlinedProtocolUnfolding case
			{
				2() from A to B;
				continue Y;
			}
		}
	}
}

